cabal-version:      3.0
name:               personal-site
version:            0.1.0.0
build-type:         Simple
license:            BSD-3-Clause
license-file:       LICENSE
author:             Zheng Wangyuan (Patrick)
maintainer:         placeholder@example.com
synopsis:           Personal website built with Hakyll

executable site
  main-is:          site.hs
  hs-source-dirs:   .
  default-language: Haskell2010
  ghc-options:      -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >= 4.18 && < 5
    , filepath >= 1.4
    , hakyll >= 4.17 && < 4.18
